--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,14 @@ button, summary {
 	cursor: pointer;
 }
 
-
-
+/**************/
+/* Kleuren website */
+/**************/
+/* 	#020659 Donkerblauw
+	#033F73 Donker blauw tekst
+	#92BE23	Groen in logo > evt focus kleur
+	#0092D8	Lichtblauw > Active
+	#F2F2F2 Wit > achtergrond*/
 
 
 /*********************/
@@ -35,5 +41,49 @@ button, summary {
 body {
   color:var(--color-text);
   background-color:var(--color-background);
+  width: 100%;
+  margin-left: 0;
+  margin-top:0;
 }
 
+/*Carousel header*/
+body>header{
+	width:100%;
+}
+body>header>ul{
+	display: flex;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	overscroll-behavior: contain;
+	list-style: none;
+	margin-left: 0;
+	margin-top: 0;
+	padding-left: 0;
+}
+body>header>ul>li{
+	/*als flex kind*/
+	flex-shrink: 0;
+	flex-basis: 100%;
+	scroll-snap-align: center;
+
+	/*als flex parent*/
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+body>header>ul>li>img{
+width: 100%;
+max-height: 15em;
+}
+/* Navigatie*/
+
+
+
+
+
+/* Eerste sectie (Mededelingen)*/
+body>main>ul:nth-of-type(1){
+	display:flex;
+	max-height: 30em;
+}
