--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,14 @@
 /**************/
 /* CSS REMEDY */
 /**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
 
-button, summary {
+button,
+summary {
 	cursor: pointer;
 }
 
@@ -24,11 +27,12 @@ button, summary {
 /*********************/
 :root {
 	/* startje */
-	--color-text:#111;
-	--color-text-heading:white;
-	--color-background:#eee;
-	--color-donkerblauw:#020659;
-	--color-active:#0092D8;
+	--color-text: #111;
+	--color-text-heading: white;
+	--color-background: #eee;
+	--color-donkerblauw: #020659;
+	--color-active: #0092D8;
+	--color-border:grey;
 }
 
 
@@ -42,16 +46,39 @@ button, summary {
 /* jouw code */
 
 body {
-    margin:0;
-    background-color:var(--color-background);
-    color:var(--color-text-heading);
+	margin: 0;
+	background-color: var(--color-background);
+	color: var(--color-text-heading);
 	font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  body>header{
-	width:100%;
+
 }
-body>header>ul{
+
+main {
+	padding: 0;
+}
+
+p {
+	font-size: 0,6em;
+}
+
+h1 {
+	font-size: 1em;
+}
+li{
+	list-style: none;
+}
+a{
+	text-decoration: none;
+}
+body>header {
+	width: 100%;
+}
+
+body img {
+	max-width: 100%;
+}
+
+body>header>ul {
 	display: flex;
 	overflow-x: auto;
 	scroll-snap-type: x mandatory;
@@ -61,7 +88,8 @@ body>header>ul{
 	margin-top: 0;
 	padding-left: 0;
 }
-body>header>ul>li{
+
+body>header>ul>li {
 	/*als flex kind*/
 	flex-shrink: 0;
 	flex-basis: 100%;
@@ -73,208 +101,369 @@ body>header>ul>li{
 	align-items: center;
 
 }
-body>header>ul>li>img{
-width: 100%;
-max-height: 30em;
-}
-  /*************/
-  /* DE HEADER */
-  /*************/
-  header section{
-    min-height:4em;
-    padding:0 1em;
-    background-color:var(--color-donkerblauw);
-    line-height:1;
 
-    /*Als flex parent*/
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    position: sticky;
-    top:0;
-    
-  
-    
-  }
-  
-  /* alle links in de header */
-  header section a {
-    padding:.5em 0;
-    color:var(--color-text-heading);
-    text-decoration:none;
-  }
-  
-  
-  
-  
-  
-  /********/
-  /* LOGO */
-  /********/
-  header section > a:first-of-type {
-    /* om het boek en de titel te positioneren */
-    display:grid;
-    grid-template-columns:min-content min-content;
-    grid-gap:.25em;
-    align-items:center;
-    
-    font-weight:bold; 
-  }
-  
-  header section > a:first-of-type img {
-    height:3em;
-  }
-  
-  
-  
-  
-  /* link icon */
-  header section > a:last-of-type img {
-    width:auto;
-    height:2em;
-  }
-  
-  
-  
-  
-  
-  /************/
-  /* HET MENU */
-  /************/
-  nav {
-   order:2;
-    
-  }
-  
-  
-  nav button {
-    padding:.5em;
-    
-    /* icon en tekst met gap-je naast elkaar */
-    display:flex;
-    align-items:center;
-    gap:.25em;
-    
-    /* standaard styling aanpassen */
-    appearance:none;
-    background-color:var(--color-donkerblauw);
-    border:none;
-    border-radius:.25em; 
-    font:inherit;
-    text-align:center;
-    color:var(--color-text-heading);
-    
-    z-index: 100;
-    position: relative;
-  }
-  
-  
-  nav.toonMenu button img {
-    content: url(https://assets.codepen.io/274456/ui-icon-cross.svg);
-    
-  }
-  
-  
-  nav ul { 
-    margin:0; 
-    padding:4em 1em 0;
-    list-style:none;
-    
-    display:flex;
-    flex-wrap:wrap;
-    gap:2em;
-    align-content:start;
-    
-    background:var(--color-donkerblauw);
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom:0;
-  
-    transform:translateX(100%);
-    
-  
-    
-  }
-  
-  /* als menu open is */
-  nav.toonMenu ul {
-    transform: translateX(0%);
-    align-items: center;
-    justify-content: center;
-    
-  }
-  
-  nav li {
-    flex-basis:9em;
-    flex-grow:1;
-	
-  }
-  
-  
-  
-  /************************/
-  /* EEN LINK IN DE LIJST */
-  /************************/
-  nav a {
-    /* icon en tekst met gap-je naast elkaar */
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    column-gap:.25em;
-    width:100%;
-    border:solid 1px var(--menu-border);
-  }
-   
-  nav a.active {
-    font-weight:bold;
-  }
-  
-  
-  
-  
-  
-  /****************************************************************/
-  /* styling voor de header als de browser minimaal 38em breed is */
-  /****************************************************************/
-  @media (min-width:45em) {
-    nav {
-        order:0;
-      
-    }
-    
-    nav button {
-        display: none;
-  
-      
-    }
-    
-    nav ul {
-        position: static;
-        transform: none;
-        padding: 0;
-        background: none;
-        
-    }
-    
-    nav li {
-        flex-basis: unset;
-        flex-grow: unset;
-    
-    }
-    
-    nav a {
-        flex-direction: column;
-      
-    }
-    
-  }
-  
-  
-  
-/* Eerste sectie (Mededelingen)*/
-body>main>ul:nth-of-type(1){
-	display:flex;
+body>header>ul>li>img {
+	width: 100%;
 	max-height: 30em;
+}
+
+/*************/
+/* DE HEADER */
+/*************/
+header section {
+	min-height: 4em;
+	padding: 0 1em;
+	background-color: var(--color-donkerblauw);
+	line-height: 1;
+
+	/*Als flex parent*/
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: sticky;
+	top: 0;
+
+
+
+}
+
+/* alle links in de header */
+header section nav a {
+	padding: .5em;
+	color: var(--color-text-heading);
+	text-decoration: none;
+	padding: 1em;
+}
+
+header section a:hover {
+	background-color: var(--color-active);
+}
+
+
+/********/
+/* LOGO */
+/********/
+header section>a:first-of-type {
+	/* om het boek en de titel te positioneren */
+	display: grid;
+	grid-template-columns: min-content min-content;
+	grid-gap: .25em;
+	align-items: center;
+	font-weight: bold;
+}
+
+header section>a:first-of-type img {
+	min-width: 5em;
+	min-height:5em;
+}
+
+
+
+
+/* link icon */
+header section>a:last-of-type img {
+	width: auto;
+	height: 2em;
+}
+
+/************/
+/* HET MENU */
+/************/
+nav {
+	order: 2;
+
+}
+
+
+nav button {
+	padding: .5em;
+
+	/* icon en tekst met gap-je naast elkaar */
+	display: flex;
+	align-items: center;
+	gap: .25em;
+
+	/* standaard styling aanpassen */
+	appearance: none;
+	background-color: var(--color-donkerblauw);
+	border: none;
+	border-radius: .25em;
+	font: inherit;
+	text-align: center;
+	color: var(--color-text-heading);
+
+	z-index: 100;
+	position: relative;
+}
+
+
+nav.toonMenu button img {
+	content: url(https://assets.codepen.io/274456/ui-icon-cross.svg);
+
+}
+
+
+nav ul {
+	margin: 0;
+	padding: 4em 1em 0;
+	list-style: none;
+
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0, 25em;
+	align-content: start;
+
+	background: var(--color-donkerblauw);
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+
+	transform: translateX(100%);
+
+
+
+}
+
+/* als menu open is */
+nav.toonMenu ul {
+	transform: translateX(0%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex-wrap: nowrap;
+}
+
+nav li {
+	flex-basis: 9em;
+	flex-grow: 1;
+	border-top-color: var(--color-active);
+
+}
+nav li:first-of-type {
+	background-color: var(--color-active);
+
+}
+
+
+/************************/
+/* EEN LINK IN DE LIJST */
+/************************/
+nav a {
+	/* icon en tekst met gap-je naast elkaar */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	column-gap: .25em;
+	width: 100%;
+	border: solid 1px var(--menu-border);
+}
+
+nav a.active {
+	font-weight: bold;
+}
+
+/* Eerste sectie (Mededelingen)*/
+body>main>ul:nth-of-type(1) {
+	/*als flex parent*/
+	display: flex;
+	max-height: 30em;
+	flex-direction: column;
+	margin-left: 2em;
+	list-style: none;
+	padding: 0.5em;
+
+}
+
+body>main>ul>li {
+	margin-bottom: 1em;
+	margin-top: 1em;
+	max-width: 40em;
+	
+}
+
+body>main>ul>li>a {
+	display: grid;
+	grid-template-columns: 8.1em auto;
+	grid-template-rows: repeat(2,5.4em);
+	column-gap: 1em;
+}
+
+body>main>ul>li>a:link {
+	color: var(--color-text);
+	text-decoration: none;
+}
+body>main>ul>li>a>p h1{
+	color: var(--color-text);
+}
+body>main>ul>li>a>img {
+	/*als flex kind*/
+	grid-column-start: 1;
+	grid-column-end: 1;
+	grid-row-start: 1;
+	grid-row-end: 1;
+	max-width: 8.1em;
+	max-height: 8.1em;
+}
+
+body>main>ul>li>a>h1 {
+	grid-column-start: 2;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 1;
+}
+body>main>ul>li>a>p:nth-of-type(1) {
+	grid-column-start: 2;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 2;
+}
+
+body>main>ul>li>a>p:nth-of-type(2) {
+	visibility: hidden;
+}
+
+
+/*section nieuwsberichten*/
+
+main section>h1:nth-of-type(1){
+	display: block;
+	background-color: var(--color-donkerblauw);
+	padding-left: 2em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	margin-top: 3em;
+	margin-left: 1em;
+	margin-left: 1em;
+}
+main>section>ul>li>a {
+	display: grid;
+	grid-template-columns: 8.1em auto;
+	grid-template-rows: repeat(3,3.7em);
+	column-gap: 1em;
+
+}
+
+main>section>ul>li>a>img {
+	/*als flex kind*/
+	grid-column-start: 1;
+	grid-column-end: 1;
+	grid-row-start: 1;
+	grid-row-end: 3;
+	max-width: 8.1em;
+	max-height: 8.1em;
+	padding-top: 0.8em;
+}
+
+main>section>ul>li>a>h1 {
+	grid-column-start: 2;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 1;
+}
+main>section>ul>li>a>p:nth-of-type(1) {
+	grid-column-start: 2;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 2;
+}
+main>section>ul>li>a>p:nth-of-type(2) {
+	visibility: visible;
+	grid-column-start: 2;
+	grid-column-end: 2;
+	grid-row-start: 3;
+	grid-row-end: 3;
+}
+
+/*section wedstrijdverslagen*/
+main section:nth-of-type(2) p:nth-of-type(2){
+	padding-top: 1em;
+	padding-left: 2em;
+	padding-right: 1em;
+	margin-right: 1.5em;
+	padding-bottom: 2em;
+	grid-column-start: 1;
+	grid-column-end: ;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	background-color: var(--color-donkerblauw);
+	color: var(--color-text-heading);
+}
+
+/****************************************************************/
+/* styling voor de header als de browser minimaal 40em breed is */
+/****************************************************************/
+@media (min-width:58em) {
+	nav {
+		order: 0;
+
+	}
+
+	nav button {
+		display: none;
+
+
+	}
+
+	nav ul {
+		position: static;
+		transform: none;
+		padding: 0;
+		background: none;
+
+	}
+
+	nav li {
+		flex-basis: unset;
+		flex-grow: unset;
+
+	}
+
+	nav a {
+		flex-direction: column;
+
+	}
+}
+
+@media (min-width:43em) {
+	body>main>ul>li>a {
+		display: grid;
+		grid-template-columns: 8.1em auto;
+		grid-template-rows: repeat(2,2.7em);
+		column-gap: 1em;
+	
+	}
+	
+	body>main>ul>li>a>img {
+		/*als flex kind*/
+		grid-column-start: 1;
+		grid-column-end: 1;
+		grid-row-start: 1;
+		grid-row-end: 3;
+		min-width: 15%;
+		padding-top: 0.8em;
+	}
+	
+	body>main>ul>li>a>h1 {
+		grid-column-start: 2;
+		grid-column-end: 2;
+		grid-row-start: 1;
+		grid-row-end: 1;
+	}
+	body>main>ul>li>a>p:nth-of-type(1) {
+		grid-column-start: 2;
+		grid-column-end: 2;
+		grid-row-start: 2;
+		grid-row-end: 2;
+	}
+	body>main>ul>li>a>p:nth-of-type(2) {
+		visibility: visible;
+		grid-column-start: 2;
+		grid-column-end: 2;
+		grid-row-start: 3;
+		grid-row-end: 3;
+	}
+	
+
 }
