--- a/styles/style_navSubmenu.css
+++ b/styles/style_navSubmenu.css
@@ -32,9 +32,9 @@ summary {
 	--color-background: #eee;
 	--color-donkerblauw: #020659;
 	--color-active: #0092D8;
-	--color-border:grey;
-	--color-tabel-achtergrondHeading:#E6E6E6;
-	--color-tabel-achtergrondDonker:#E6E6E6;
+	--color-border: grey;
+	--color-tabel-achtergrondHeading: #E6E6E6;
+	--color-tabel-achtergrondDonker: #E6E6E6;
 	--color-tabel-achtergrondLicht: #F9F9F9;
 }
 
@@ -61,21 +61,21 @@ main {
 }
 
 p {
-	font-size: 0,6em;
+	font-size: 0, 6em;
 }
 
-h1 {
+h2 {
 	font-size: 1em;
 }
-h2{
-	font-size: 0.9em;
-}
-li{
+
+li {
 	list-style: none;
 }
-a{
+
+a {
 	text-decoration: none;
 }
+
 body>header {
 	width: 100%;
 }
@@ -84,7 +84,81 @@ body img {
 	max-width: 100%;
 }
 
-body>header>ul {
+/* Carousel header: Opmaak en positioneren buttons*/
+header section:nth-of-type(1) {
+	position: relative;
+	padding: 0;
+}
+
+header section:nth-of-type(1) button {
+	position: absolute;
+	appearance: none;
+	border: none;
+	background-color: transparent;
+}
+
+header section:nth-of-type(1) button:nth-of-type(1) {
+	left: 0;
+	top: 50%;
+	transform: translateX(1em) rotate(0deg);
+}
+
+header section:nth-of-type(1) button:nth-of-type(2) {
+	right: 0;
+	top: 50%;
+	transform: translateX(-1em) rotate(180deg);
+}
+
+button div {
+	width: 1.5em;
+	height: 1.5em;
+	box-shadow: inset .25em -.25em 0 white;
+	transform: translateX(.25em) rotate(45deg);
+}
+
+header section:nth-of-type(1) button:nth-of-type(3){
+	width: 1.5em;
+	height: 1.5em;
+	border-radius: .5em;
+	border:solid;
+	border-color: white;
+	background-color: lightgray;
+	top:90%;
+	left:44%
+  }
+  header section:nth-of-type(1) button:nth-of-type(4){
+	width: 1.5em;
+	height: 1.5em;
+	border-radius: .5em;
+	border:solid;
+	border-color: white;
+	background-color: lightgray;
+	top:90%;
+	left:48%
+  }
+  header section:nth-of-type(1) button:nth-of-type(5){
+	width: 1.5em;
+	height: 1.5em;
+	border-radius: .5em;
+	border:solid;
+	border-color: white;
+	background-color: lightgray;
+	top:90%;
+	left:52%
+  }
+  header section:nth-of-type(1) button:nth-of-type(6){
+	width: 1.5em;
+	height: 1.5em;
+	border-radius: .5em;
+	border:solid;
+	border-color: white;
+	background-color: lightgray;
+	top:90%;
+	left:56%
+  }
+  
+/* Carousel header: opmaak foto's en overflow */
+body>header>section:nth-of-type(1)>ul {
 	display: flex;
 	overflow-x: auto;
 	scroll-snap-type: x mandatory;
@@ -95,7 +169,7 @@ body>header>ul {
 	padding-left: 0;
 }
 
-body>header>ul>li {
+body>header>section:nth-of-type(1)>ul>li {
 	/*als flex kind*/
 	flex-shrink: 0;
 	flex-basis: 100%;
@@ -108,15 +182,13 @@ body>header>ul>li {
 
 }
 
-body>header>ul>li>img {
+body>header>section:nth-of-type(1)>ul>li>img {
 	width: 100%;
 	max-height: 30em;
 }
 
-/*************/
-/* DE HEADER */
-/*************/
-header section {
+/* Header navigatiebalk positie logo en navigatie*/
+header section:nth-of-type(2) {
 	min-height: 4em;
 	padding: 0 1em;
 	background-color: var(--color-donkerblauw);
@@ -128,62 +200,45 @@ header section {
 	align-items: center;
 	position: sticky;
 	top: 0;
+
+
+
 }
 
-/* alle links in de header */
-header section nav li a {
+/* Opmaak alle links in de header */
+header section:nth-of-type(2) nav a {
+	padding: .5em;
 	color: var(--color-text-heading);
 	text-decoration: none;
+	padding: 1em;
 }
 
-header section li:hover {
+header section:nth-of-type(2) a:hover {
 	background-color: var(--color-active);
 }
 
 
-/********/
-/* LOGO */
-/********/
-header section>a:first-of-type {
-	/* om het boek en de titel te positioneren */
-	display: grid;
-	grid-template-columns: min-content min-content;
-	grid-gap: .25em;
-	align-items: center;
-	font-weight: bold;
-}
-
-header section>a:first-of-type img {
+/* Grootte logo */
+header section:nth-of-type(2)>a:first-of-type img {
 	min-width: 5em;
-	min-height:5em;
+	min-height: 5em;
 }
 
-
-
-/* link icon */
-header section>a:last-of-type img {
+/* Hamburger Menu grootte */
+header section:nth-of-type(2)>a:last-of-type img {
 	width: auto;
 	height: 2em;
 }
 
-/************/
-/* HET MENU */
-/************/
+
+/* Navigatie menu */
 nav {
 	order: 2;
 
 }
 
-
 nav button {
 	padding: .5em;
-
-	/* icon en tekst met gap-je naast elkaar */
-	display: flex;
-	align-items: center;
-	gap: .25em;
-
-	/* standaard styling aanpassen */
 	appearance: none;
 	background-color: var(--color-donkerblauw);
 	border: none;
@@ -203,7 +258,7 @@ nav.toonMenu button img {
 }
 
 
-nav>ul {
+nav ul {
 	margin: 0;
 	padding: 4em 1em 0;
 	list-style: none;
@@ -236,336 +291,55 @@ nav.toonMenu ul {
 nav li {
 	flex-basis: 9em;
 	flex-grow: 1;
+	max-height: 3em;
 	border-top-color: var(--color-active);
 
 }
+
 nav li:first-of-type {
 	background-color: var(--color-active);
 
 }
-nav ul ul{
-	max-height: 0;
-	overflow: hidden;
-	transition: 1s;
-}
-nav ul ul.open{
-	max-height: 10em;
-}
 
-
-/************************/
-/* EEN LINK IN DE LIJST */
-/************************/
-nav li {
+/* Een linkje in de navigatie */
+nav a {
 	/* icon en tekst met gap-je naast elkaar */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	column-gap: .25em;
 	width: 100%;
 	border: solid 1px var(--menu-border);
 }
 
-nav li.active {
+nav a.active {
 	font-weight: bold;
-	background-color: var(--color-active);
 }
 
 
-/* Eerste sectie (Mededelingen)*/
-body>main>ul:nth-of-type(1) {
-	/*als flex parent*/
-	display: flex;
-	max-height: 30em;
-	flex-direction: column;
-	margin-left: 2em;
-	list-style: none;
-	padding: 0.5em;
-
-}
-
-body>main>ul>li {
-	margin-bottom: 1em;
-	margin-top: 1em;
-	max-width: 40em;
-	
-}
-
-body>main>ul>li>a {
-	display: grid;
-	grid-template-columns: 8.1em auto;
-	grid-template-rows: repeat(2,5.4em);
-	column-gap: 1em;
-}
-
-body>main>ul>li>a:link {
-	color: var(--color-text);
-	text-decoration: none;
-}
-body>main>ul>li>a>p h1{
-	color: var(--color-text);
-}
-body>main>ul>li>a>img {
-	/*als flex kind*/
-	grid-column-start: 1;
-	grid-column-end: 1;
-	grid-row-start: 1;
-	grid-row-end: 1;
-	max-width: 8.1em;
-	max-height: 8.1em;
-}
-
-body>main>ul>li>a>h1 {
-	grid-column-start: 2;
-	grid-column-end: 2;
-	grid-row-start: 1;
-	grid-row-end: 1;
-}
-body>main>ul>li>a>p:nth-of-type(1) {
-	grid-column-start: 2;
-	grid-column-end: 2;
-	grid-row-start: 2;
-	grid-row-end: 2;
-}
-
-body>main>ul>li>a>p:nth-of-type(2) {
-	visibility: hidden;
-}
-
-
-/*section nieuwsberichten*/
-
-main section>h1:nth-of-type(1){
-	display: block;
-	background-color: var(--color-donkerblauw);
-	padding-left: 2em;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
-	margin-top: 3em;
-	margin-left: 1em;
-	margin-left: 1em;
-}
-main>section>ul>li>a {
-	display: grid;
-	grid-template-columns: 8.1em auto;
-	grid-template-rows: repeat(3,3.7em);
-	column-gap: 1em;
-
-}
-
-main>section>ul>li>a>img {
-	/*als flex kind*/
-	grid-column-start: 1;
-	grid-column-end: 1;
-	grid-row-start: 1;
-	grid-row-end: 3;
-	max-width: 8.1em;
-	max-height: 8.1em;
-	padding-top: 0.8em;
-}
-
-main>section>ul>li>a>h1 {
-	grid-column-start: 2;
-	grid-column-end: 2;
-	grid-row-start: 1;
-	grid-row-end: 1;
-}
-main>section>ul>li>a>p:nth-of-type(1) {
-	grid-column-start: 2;
-	grid-column-end: 2;
-	grid-row-start: 2;
-	grid-row-end: 2;
-}
-main>section>ul>li>a>p:nth-of-type(2) {
-	visibility: visible;
-	grid-column-start: 2;
-	grid-column-end: 2;
-	grid-row-start: 3;
-	grid-row-end: 3;
-}
-
-/*section wedstrijdverslagen*/
-main section:nth-of-type(2) p:nth-of-type(2){
-	padding-top: 1em;
-	padding-left: 2em;
-	padding-right: 1em;
-	margin-right: 1.5em;
-	padding-bottom: 2em;
-	grid-column-start: 1;
-	grid-column-end: 1;
-	grid-row-start: 1;
-	grid-row-end: 2;
-	background-color: var(--color-donkerblauw);
-	color: var(--color-text-heading);
-}
-/* naar volgende pagina buttons*/
-main section section{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-main section section p{
-	color: var(--color-text);
-	margin-right: 1em;
-}
-main section section button{
-	color: var(--color-text-heading);
-	background-color: var(--color-donkerblauw);
-	max-height: 3em;
-}
-
-/*corona maatregelen*/
-main section:nth-child(4){
-	background-color: var(--color-donkerblauw);
-	margin-top: 5%;
-}
-main section:nth-child(4) a{
-	text-decoration: none;
-	color: var(--color-text-heading);
-	padding: 5px;
-	flex-direction: column;
-	align-items: center;
-	display: flex;
-}
-main section:nth-child(4) img{
-	max-width:100%;
-	order: -2;
-}
-
-/*sponsoren*/
-main section:nth-child(5){
-	background-color: var(--color-donkerblauw);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-top: 5%;
-}
-/*lid worden*/
-main>a>h1{
-	color: var(--color-text-heading);
-	background-color: var(--color-donkerblauw);
-	text-align: center;
-	padding: 2%;
-	margin-left: 5%;
-	margin-right: 5%;
-}
-/*agenda komende twee weken*/
-main>section:nth-of-type(6)>ul>li {
-	display: grid;
-	grid-template-columns: 4.05em 4.05em auto;
-	grid-template-rows: repeat(3,3.7em);
-	column-gap: 1em;
-
-}
-
-main>section:nth-of-type(6)>ul>li>h1 {
-	grid-column-start: 3;
-	grid-column-end: 3;
-	grid-row-start: 1;
-	grid-row-end: 1;
-	color: var(--color-text);
-}
-main>section:nth-of-type(6)>ul>li p{
-	color: var(--color-text);
-}
-main>section:nth-of-type(6)>ul>li>p:nth-of-type(1) {
-	grid-column-start: 3;
-	grid-column-end: 3;
-	grid-row-start: 2;
-	grid-row-end: 2;
-}
-main>section:nth-of-type(6)>ul>li>p:nth-of-type(2) {
-	grid-column-start: 1;
-	grid-column-end: 1;
-	grid-row-start: 1;
-	grid-row-end: 1;
-	background-color: var(--color-donkerblauw);
-	color: var(--color-text-heading);
-	text-align: center;
-	margin: 0;
-	padding-top: 1em;
-}
-main>section:nth-of-type(6)>ul>li>p:nth-of-type(3) {
-	grid-column-start: 1;
-	grid-column-end: 1;
-	grid-row-start: 2;
-	grid-row-end: 2;
-	text-align: center;
-	border: solid;
-	border-color: var(--color-border);
-	
-}
-
-/* verjaardagen*/
-main>section:nth-of-type(7)>ul{
-	display: flex;
-}
-
-main>section:nth-of-type(7)>ul>li>ul li:nth-child(2n){
-	background-color: var(--color-tabel-achtergrondLicht);
-	color:var(--color-text);
-}
-
-main>section:nth-of-type(7)>ul>li>ul li:nth-child(2n + 1){
-	background-color: var(--color-tabel-achtergrondDonker);
-	color:var(--color-text);
-}
-
-main>section:nth-of-type(7)>ul>li>ul li:first-of-type{
-	background-color: var(--color-tabel-achtergrondHeading);
-	color:var(--color-text);
-	font-weight: 700;
-}
-main>section:nth-of-type(9)>ul{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin:0;
-	padding: 0;
-}
-footer{
-	background-color: var(--color-donkerblauw);
-	padding-top:1%;
-	padding-left: 2%;
-}
-footer ul{
-	margin-bottom:15%;
-}
-
-/****************************************************************/
-/* styling voor de header als de browser minimaal 40em breed is */
-/****************************************************************/
-@media (min-width:58em) {	
-	header section{
-		justify-content: start;
-	}
+@media (min-width:58em) {
 	nav {
 		order: 0;
-		margin: 0;
+
 	}
 
 	nav button {
 		display: none;
-
-
 	}
 
 	nav ul {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: nowrap;
-		justify-content: space-between;
 		position: static;
 		transform: none;
 		padding: 0;
 		background: none;
-
+		display:flex;
+		gap:1em;
+		
+		margin:0;
+		padding:0;
+		list-style:none;
 	}
 
 	nav li {
+
 		flex-basis: unset;
 		flex-grow: unset;
-		padding: 1em;
 
 	}
 
@@ -573,46 +347,17 @@ footer ul{
 		flex-direction: column;
 
 	}
-}
-
-@media (min-width:43em) {
-	body>main>ul>li>a {
-		display: grid;
-		grid-template-columns: 8.1em auto;
-		grid-template-rows: repeat(2,2.7em);
-		column-gap: 1em;
 	
-	}
-	
-	body>main>ul>li>a>img {
-		/*als flex kind*/
-		grid-column-start: 1;
-		grid-column-end: 1;
-		grid-row-start: 1;
-		grid-row-end: 3;
-		min-width: 15%;
-		padding-top: 0.8em;
+	ul ul {
+		display: flex;
+		flex-direction: column;
+		max-height:0;
+		overflow:hidden;
+		
+		transition:1s;
 	}
 	
-	body>main>ul>li>a>h1 {
-		grid-column-start: 2;
-		grid-column-end: 2;
-		grid-row-start: 1;
-		grid-row-end: 1;
+	ul ul.open {
+		max-height:5em;
 	}
-	body>main>ul>li>a>p:nth-of-type(1) {
-		grid-column-start: 2;
-		grid-column-end: 2;
-		grid-row-start: 2;
-		grid-row-end: 2;
-	}
-	body>main>ul>li>a>p:nth-of-type(2) {
-		visibility: visible;
-		grid-column-start: 2;
-		grid-column-end: 2;
-		grid-row-start: 3;
-		grid-row-end: 3;
-	}
-	
-
 }
