--- a/styles/style_senioren_devinken3.css
+++ b/styles/style_senioren_devinken3.css
@@ -67,6 +67,7 @@ header {
 img {
 	max-width: 100%;
 }
+
 :focus{
 	border-color: var(--color-focus);
 	border-style: solid;
@@ -234,13 +235,13 @@ header section:nth-of-type(2) nav a {
 
 
 /* Grootte logo */
-header section:nth-of-type(2)>a:first-of-type img {
+header section:nth-of-type(2) > a:first-of-type img {
 	min-width: 3em;
 	min-height: 3em;
 }
 
 /* Hamburger Menu grootte */
-header section:nth-of-type(2)>a:last-of-type img {
+header section:nth-of-type(2) > a:last-of-type img {
 	width: auto;
 	height: 2em;
 }
@@ -273,7 +274,7 @@ header section:nth-of-type(2) nav.toonMenu button img {
 }
 
 
-header section:nth-of-type(2) nav>ul {
+header section:nth-of-type(2) nav > ul {
 	display: flex;
 	margin: 0;
 	padding: 4em 1em 2em;
@@ -317,7 +318,7 @@ header section:nth-of-type(2) nav ul li ul.subMenu {
 
 }
 
-header section:nth-of-type(2) nav.toonMenu>ul {
+header section:nth-of-type(2) nav.toonMenu > ul {
 	transform: translateX(0%);	
 }
 header section:nth-of-type(2) nav ul li ul li{
@@ -363,7 +364,6 @@ header section:nth-of-type(2) nav button.active {
 		background: none;
 		align-items: center;
 		width:90%
-		
 		
 	}
 
@@ -441,16 +441,26 @@ main > section:first-of-type > ul > li:nth-of-type(2){
 	max-width: 23em;
 }
 
-
 /* Wedsrtijdprogramma */
 main > section:nth-of-type(2){
 	grid-column: 1;
 	grid-row-start: 4;
 	grid-row-end: 6;
+	min-width:100%
 }
 main > section:nth-of-type(2) > ul {
 	display: flex;
-    padding:0;
+}
+main > section:nth-of-type(2) > ul > li > ul{
+	padding: 0;
+}
+
+main > section:nth-of-type(2) > ul > li > ul li:first-of-type {
+	background-color: var(--color-tabel-achtergrondHeading);
+	color: var(--color-text);
+	font-weight: 700;
+	padding-right: 8em;
+	
 }
 
 main > section:nth-of-type(2) > ul > li > ul li:nth-child(2n) {
@@ -463,13 +473,6 @@ main > section:nth-of-type(2) > ul > li > ul li:nth-child(2n + 1) {
 	color: var(--color-text);
 }
 
-main > section:nth-of-type(2) > ul > li > ul li:first-of-type {
-	background-color: var(--color-tabel-achtergrondHeading);
-	color: var(--color-text);
-	font-weight: 700;
-}
-
-
 /* Poulestanden */
 main > section:nth-of-type(3){
 	grid-column: 1;
@@ -477,14 +480,14 @@ main > section:nth-of-type(3){
 	grid-row-end: 8;
 }
 
-main>section:nth-of-type(3)>ul {
+main > section:nth-of-type(3) > ul {
 	display: flex;
 	overflow-x: auto;
 	overscroll-behavior: contain;
-    padding:0;
 }
-
-
+main > section:nth-of-type(3) > ul > li > ul{
+	padding:0;
+}
 main>section:nth-of-type(3)>ul>li>ul li:nth-child(2n) {
 	background-color: var(--color-tabel-achtergrondLicht);
 	color: var(--color-text);
@@ -499,7 +502,8 @@ main>section:nth-of-type(3)>ul>li>ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
-	width:13em;
+	width:11em;
+	padding-right: 1em;
 }
 
 /* Uitslagen */
@@ -513,9 +517,11 @@ main > section:nth-of-type(4){
 main > section:nth-of-type(4) > ul {
 	display: flex;
 	flex-direction: row;
-    padding:0;
 }
 
+main > section:nth-of-type(4) > ul > li > ul{
+	padding: 0;
+}
 main > section:nth-of-type(4) > ul > li > ul li:nth-child(2n) {
 	background-color: var(--color-tabel-achtergrondLicht);
 	color: var(--color-text);
@@ -530,6 +536,7 @@ main > section:nth-of-type(4) > ul > li > ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
+	width:11em;
 
 }
 /*section wedstrijdverslagen*/
@@ -590,14 +597,17 @@ main > section:nth-of-type(6){
 	grid-column: 1;
 	grid-row-start: 13;
 	grid-row-end:14 ;
+	width: 100%;
 }
 
-main>section:nth-of-type(6)>ul {
+main > section:nth-of-type(6) > ul {
 	display: flex;
-    padding:0;
 }
 
-main>section:nth-of-type(6)>ul>li>ul li:nth-child(2n) {
+main > section:nth-of-type(6) > ul > li > ul{
+	padding: 0;
+}
+main > section:nth-of-type(6) > ul > li > ul li:nth-child(2n) {
 	background-color: var(--color-tabel-achtergrondLicht);
 	color: var(--color-text);
 }
@@ -611,6 +621,7 @@ main>section:nth-of-type(6)>ul>li>ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
+	width:10em;
 }
 
 
@@ -843,11 +854,16 @@ main > section:nth-of-type(11){
 	grid-row-start: 13;
 	grid-row-end: 15;
 }
+
 main > section:nth-of-type(11) > ul {
 	display: flex;
 }
 
-main>section:nth-of-type(11)>ul>li>ul li:nth-child(2n) {
+main > section:nth-of-type(11) > ul > li > ul{
+	padding: 0;
+}
+
+main > section:nth-of-type(11) > ul > li > ul li:nth-child(2n) {
 	background-color: var(--color-tabel-achtergrondLicht);
 	color: var(--color-text);
 }
@@ -861,6 +877,7 @@ main>section:nth-of-type(11)>ul>li>ul li:first-of-type {
 	background-color: var(--color-tabel-achtergrondHeading);
 	color: var(--color-text);
 	font-weight: 700;
+	width:8.8em;
 }
 
 /* Nieuwsberichten en verslagen */
@@ -917,6 +934,38 @@ main > section:nth-of-type(13){
 	grid-column: 2;
 	grid-row-start:19;
 	grid-row-end: 24;
+
+}
+/* Afbeeldingen (li) naast elkaar plaatsen + scrollbaar*/
+main > section:nth-of-type(13) > ul {
+	display: flex;
+	align-items: center;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	overscroll-behavior: contain;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+
+/* Zorgen dat als je stopt met scrollen. Hij de afbeelding in het midden zet */
+main > section:nth-of-type(13) > ul > li {
+	/*als flex kind*/
+	flex-shrink: 0;
+	flex-basis: 100%;
+	scroll-snap-align: center;
+
+	/*als flex parent*/
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+main > section:nth-of-type(9) > ul > li > img {
+	max-width: 70%;
+	max-height:30em;
 }
 
 footer {
